* Make double-click tolerance consistent with system settings
* Ticket #4978, Execute "once" after playback event when playlist ends, regardless of the loop count
* Ticket #4991, Text subtitles: "opaque box" outlines will now always be drawn even if the border width is set to 0.
  The size of the text is independent of the border width so there is no reason not to draw that part
* Updated MediaInfoLib to v0.7.71
* Updated ZenLib to v0.4.29 r498
* Updated Little CMS to v2.7 (git 8174681)
* Updated Unrar to v5.2.2
* Updated LAV Filters to v0.63.0.2:
    - Ticket #5030, LAV Video Decoder: The video timestamps could be wrong in some cases when using H264 DXVA decoding.
      This could lead to synchronization issue with the audio
* Updated Arabic, Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (Simplified and Traditional),
  Croatian, Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay,
  Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Thai, Turkish,
  Ukrainian and Vietnamese translations
! XySubFilter: Always preserve subtitle frame aspect ratio
! Properties dialog: The creation time did not account for the local timezone
! Properties dialog: More consistent UI for the "Resources" tab
! Ticket #2420, Improve the reliability of the DirectShow hooks
! Ticket #2953, DVB: Fix crash when closing window right after switching channel
! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
! Ticket #4029, Fix a rare crash when right-clicking on the playlist panel
! Ticket #4436, DVB: Improve compatibility with certain tuners
! Ticket #4551, Fix a possible crash when saving the current frame
! Ticket #4933, ASS/SSA subtitles: Fix a crash for elements with no horizontal border but a vertical one
! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area