@@ -1104,7 +1104,7 @@ CSubtitle::CSubtitle(RenderingCaches& renderingCaches)
     , m_wrapStyle(0)
     , m_fAnimated(false)
     , m_bIsAnimated(false)
-    , m_relativeTo(STSStyle::AUTO)
+    , m_relativeTo(STSStyle::VIDEO)
     , m_pClipper(nullptr)
     , m_topborder(0)
     , m_bottomborder(0)
