@@ -1346,8 +1346,8 @@ void CAppSettings::LoadSettings()
     {
         CString temp = pApp->GetProfileString(IDS_R_SETTINGS, IDS_RS_SPSTYLE);
         subtitlesDefStyle <<= temp;
-        if (temp.IsEmpty()) {
-            subtitlesDefStyle.relativeTo = STSStyle::AUTO; // default to auto mode
+        if (temp.IsEmpty()) { // Position the text subtitles relative to the video frame by default
+            subtitlesDefStyle.relativeTo = STSStyle::VIDEO;
         }
     }
     fOverridePlacement = !!pApp->GetProfileInt(IDS_R_SETTINGS, IDS_RS_SPOVERRIDEPLACEMENT, FALSE);
